--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,6 @@ jobs:
             rm -rf app # Delete current app
             mkdir app
             cd app
-            git clone git@github.com:etokatlian/p2punk.git .
+            git clone https://github.com/etokatlian/p2punk.git .
             npm install
             npm run start
